<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBackgroundBottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorBackgroundTop">

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/ThermostatName"/>

        <TextView
            android:id="@+id/currentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_temperature"
            android:layout_weight="1"
            style="?android:listChoiceBackgroundIndicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="@drawable/shape">

        <ImageButton
            android:id="@+id/ArrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/left_arrow"
            android:layout_gravity="center"
            android:background="#F9F8F8"/>

        <TextView
            android:id="@+id/target_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="150dp"
            android:text="20"
            android:layout_gravity="center"
            style="?android:listChoiceBackgroundIndicator"/>

        <ImageButton
            android:id="@+id/ArrowRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_arrow"
            android:layout_gravity="center"
            android:background="#F9F8F8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:background="@color/colorBackgroundTop">

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Settings"/>

        <Button
            android:id="@+id/schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Schedule"/>
    </LinearLayout>
</FrameLayout>