<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/battery_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/battery_green"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/BatteryLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/battery_image"
            android:layout_centerVertical="true"
            android:text="@string/BatteryLevel"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirmwareVersion"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="14dp"/>

        <TextView
            android:id="@+id/thermostat_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="1.0"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ChangeCalibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocalTempCalibr"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginBottom="14dp"/>

        <TextView
            android:id="@+id/TemperatureCalibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0.0"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/identify_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/IdentifyLevel"/>

    <SeekBar
        android:id="@+id/identify_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:max="2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/lock_display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/LockDisplayLevel"/>

    <SeekBar
        android:id="@+id/lock_display_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:max="2"/>

</LinearLayout>